--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -13,14 +13,13 @@
 
     <h2>¡Hola {{ session['user_name'] or '' }}!</h2>
     <a href="{{ url_for('logout') }}">Cerrar sesión</a><br>
-    <a href="{{ url_for('view_cart') }}">Ver mi carrito</a><br>
     <h2>Tenemos los mejores productos en todas las categorías para tí</h2>
 
     <!--Menu logueo Proveedor-->
     {% elif session['type'] == 2 %}
 
-    <h2> Tienda : {{session['tienda']}}</h2>
-    <h2> RUC : {{session['user_name']}}</h2>
+    <h2> Tienda : {{session['user_nombrep']}}</h2>
+    <h2> RUC : {{session['user_ruc']}}</h2>
     <a href="{{ url_for('logout') }}">Cerrar sesión</a><br>
     <a href="{{ url_for('registrarProducto') }}">Añadir un producto</a>
 
@@ -28,9 +27,10 @@
 
     <!-- Ponemos un enlace para que el usuario ingrese a su cuenta y otro para el registro -->
     <a href="{{ url_for('login') }}">Iniciar sesión</a> <br>
-    <a href="{{ url_for('loginComercio') }}">Iniciar sesión como Comercio</a>
-    <br>
-    <a href="{{ url_for('registration') }}">Registrarse</a>
+    <a href="{{ url_for('loginP') }}">Iniciar sesión como Comercio</a>
+    <br><br>
+    <a href="{{ url_for('registration') }}">Registrarse como Usuario</a><br>
+    <a href="{{ url_for('registrationP') }}">Registrarse como Proveedor</a>
 
     {% endif %}
     <br><br>
