--- a/templates/layouts/application.html
+++ b/templates/layouts/application.html
@@ -5,7 +5,7 @@
     <!-- Usaremos utf-8 como formato de codificación -->
     <meta charset="utf-8">
     <!-- Título de nuestra página -->
-    <title>Linio Expres - Compras por internet</title>
+    <title>Linio Express - Compras por internet</title>
 </head>
 
 <body>
