--- a/templates/products/register.html
+++ b/templates/products/register.html
@@ -23,12 +23,17 @@
     <!-- Input de Descripción -->
     <label for="descripcion">Descripción</label><br>
     <input id="descripcion" type="text" name="descripcion"><br><br>
+    <!-- Input de Precio -->
+    <label for="precio">Precio</label><br>
+    <input id="precio" type="number" name="precio"><br><br>
     <!-- Input de Stock -->
     <label for="stock">Stock</label><br>
     <input id="stock" type="number" name="stock"><br><br>
-    <!-- Input de correo electronico -->
-    <button type="submit">Registrarse</button>
+    <!-- Enviar formulario-->
+    <button type="submit">Registrar Producto</button>
 </form>
 
 
+<!-- Footer -->
+{% include '/layouts/footer.html' %}
 {% endblock %}
