Update class fix

--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -10,7 +10,7 @@
 	</script>
     <!-- En el footer pondremos información adicional sobre el negocio -->
     <h3>Acerca de linio</h3>
-    <ul>
+    <ul class="">
         <!-- Usaremos la propiedad target="_blank" para que el enlace abra en otra pestaña -->
         <a href="#" target="_blank">
             <li>Historia</li>
