--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -12,8 +12,8 @@
 
 <!--Formulario de registro -->
 <form role="form" id="LoginForm" method="post">
-    <!-- Input de correo electrónico -->
-    <label for="username">Correo electrónico</label><br>
+    <!-- Input de Usuario -->
+    <label for="username">Usuario</label><br>
     <input id="username" type="text" name="username"><br><br>
     <!-- Input de contraseña -->
     <label for="password">Contraseña</label><br>
