--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -22,16 +22,16 @@
     <input id="lastname" type="text" name="lastname"><br><br>
     <!-- Input de edad -->
     <label for="age">Edad</label><br>
-    <input id="age" type="number" name="age"><br><br>
+    <input id="age" type="number" min="18" name="age"><br><br>
     <!-- Input de Documento -->
     <label for="document">Documento</label><br>
-    <input id="document" type="text" name="document"><br><br>
+    <input id="document" type="text" minlength="7" name="document"><br><br>
     <!-- Input de correo electronico -->
     <label for="email">Correo electrónico</label><br>
     <input id="email" type="email" name="email"><br><br>
     <!-- Input de Telefono -->
     <label for="phone">Teléfono</label><br>
-    <input id="phone" type="text" name="phone"><br><br>
+    <input id="phone" type="phone" name="phone"><br><br>
     <!-- Input de nombre usuario -->
     <label for="username">Nombre de usuario</label><br>
     <input id="username" type="text" name="username"><br><br>
