--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -1,37 +1,69 @@
 <!-- El header va en la parte superior de nuestra página. Incluiremos el logo de linio -->
 <header>
-    <!-- Usaremos h1 para ponerle un título a nuestra página web -->
-    <h1>Linio Express</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="{{ url_for('home') }}">
+            <img src="https://linio-express.s3-sa-east-1.amazonaws.com/logos/Linio_logo.svg" height="80" >
+        </a>
+        {% if session['type'] == 1%}
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto ">
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('logout') }}">Cerrar sesión</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Compras
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item disabled" href="#">Carrito</a>
+                  <a class="dropdown-item disabled" href="#">Mis Compras</a>
+                </div>
+              </li>
+            </ul>
+            <span class="navbar-text">
+                ¡Hola {{ session['user_name'] or '' }}!
+            </span>
+          </div>
+    
+        <!--Menu logueo Proveedor-->
+        {% elif session['type'] == 2 %}
 
-    <!-- Al hacerle click al logo de linio se regresa a la página de inicio -->
-    <a href="{{ url_for('home') }}">
-        <img src="https://linio-express.s3-sa-east-1.amazonaws.com/logos/Linio_logo.svg" height="80">
-    </a>
-    <br><br>
-    <!--Menu logueo usuario-->
-    {% if session['type'] == 1%}
-
-    <h2>¡Hola {{ session['user_name'] or '' }}!</h2>
-    <a href="{{ url_for('logout') }}">Cerrar sesión</a><br>
-    <h2>Tenemos los mejores productos en todas las categorías para tí</h2>
-
-    <!--Menu logueo Proveedor-->
-    {% elif session['type'] == 2 %}
-
-    <h2> Tienda : {{session['user_name']}}</h2>
-    <h2> RUC : {{session['user_ruc']}}</h2>
-    <a href="{{ url_for('logoutP') }}">Cerrar sesión</a><br>
-    <a href="{{ url_for('registrarProducto') }}">Añadir un producto</a>
-
-    {% else %}
-
-    <!-- Ponemos un enlace para que el usuario ingrese a su cuenta y otro para el registro -->
-    <a href="{{ url_for('login') }}">Iniciar sesión como Cliente</a> <br>
-    <a href="{{ url_for('loginP') }}">Iniciar sesión como Proveedor</a>
-    <br><br>
-    <a href="{{ url_for('registration') }}">Registrarse como Cliente</a><br>
-    <a href="{{ url_for('registrationP') }}">Registrarse como Proveedor</a>
-
-    {% endif %}
-    <br><br>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto ">
+              <li class="nav-item">
+                <a class="nav-link"  href="#">Tienda : {{session['user_nombrep']}} </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('registrarProducto') }}">Añadir un producto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('logoutP') }}">Cerrar sesión</a>
+              </li>
+            </ul>
+            <span class="navbar-text">
+                RUC : {{session['user_ruc']}}
+            </span>
+          </div> 
+        {% else %}
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto ">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Login / Register
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="{{ url_for('login') }}">Login Cliente</a>
+                  <a class="dropdown-item" href="{{ url_for('registration') }}">Registrarse como Cliente</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{{ url_for('loginP') }}">Login Proveedor</a>
+                  <a class="dropdown-item" href="{{ url_for('registrationP') }}">Registrarse como Proveedor</a>
+                </div>
+              </li>
+            </ul>
+          </div>  
+        {% endif %}
+      </nav>
 </header>
