--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -2,28 +2,30 @@
 {% block content %}
 <!-- Header con logo de Linio -->
 {% include '/layouts/header.html' %}
-
-<!-- Título de la página -->
-<h1>Inicia sesión en Linio Express</h1>
-
+<br><br>
 {% if error %}
-  <h3 style="color:Tomato;">{{error}}</h3>
+  <h3 style="color:Tomato;">{{error}}</h3><br>
 {% endif %}
 
 <!--Formulario de registro -->
-<form role="form" id="LoginForm" method="post">
-    <!-- Input de Usuario -->
-    <label for="username">Usuario</label><br>
-    <input id="username" type="text" name="username"><br><br>
-    <!-- Input de contraseña -->
-    <label for="password">Contraseña</label><br>
-    <input id="password" type="password" name="password" ><br><br>
-    <!-- Botón para enviar datos del formualario -->
-    <button type="submit">Iniciar Sesión</button>
+<div class="mx-auto" style="width: 400px;" >
+  <!-- Título de la página -->
+<h1 style="text-align: center;">Inicia sesión en Linio Express</h1>
+<form role="form" id="LoginForm" method="post" >
+  <div class="form-group">
+    <label for="username">Usuario</label>
+    <input type="text" class="form-control" id="username" name="username" required>
+  </div>
+  <div class="form-group">
+    <label for="password">Contraseña</label>
+    <input type="password" class="form-control" id="password" name="password" required>
+  </div>
+  <button type="submit" class="btn btn-primary ">Iniciar Sesión</button>
 </form>
+<div class="dropdown-divider"></div>
+  <a class="dropdown-item" href="#">Crear una cuenta de Cliente</a>
+</div>
 
-<!-- Enlace a Inicio de sesión en caso el usuario ya tenga cuenta -->
-<h3>¿Aún no tienes una cuenta en Linio?</h3>
-<a href="{{ url_for('registration') }}">Regístrate</a>
-
+<!-- Footer -->
+{% include '/layouts/footer.html' %}
 {% endblock %}
