--- a/templates/proveedor/register.html
+++ b/templates/proveedor/register.html
@@ -22,7 +22,7 @@
     <input id="address" type="text" name="address"><br><br>
     <!-- Input de edad -->
     <label for="ruc">RUC</label><br>
-    <input id="ruc" type="number" name="ruc"><br><br>
+    <input id="ruc" type="text" minlength="11" maxlength="11" name="ruc"><br><br>
     <!-- Input de Documento -->
     <label for="password">Contraseña</label><br>
     <input id="password" type="text" name="password"><br><br>
